<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:key="header_general"
        android:title="@string/settings_header_general">

        <SwitchPreference
            app:allowDividerAbove="false"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:key="nightThemeSwitch"
            app:title="Dark Mode"
            app:summary="@string/settings_night_mode_summary" />

        <CheckBoxPreference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="allowMessages"
            android:title="@string/settings_allow_messages"
            android:summary="@string/settings_allow_messages_summary">
        </CheckBoxPreference>

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_push_notifications"
            android:title="@string/settings_notifications" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_change_password"
            android:title="@string/settings_change_password"
            android:enabled="true"
            android:summary="" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_deactivate_account"
            android:title="@string/settings_deactivate_account"
            android:enabled="true"
            android:summary="" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_blocked_list"
            android:title="Block List" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_services"
            android:title="@string/settings_services"

            android:summary="@string/settings_services_summary" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"
            android:key="settings_language"
            android:title="@string/settings_language_label"

            android:summary="@string/settings_language_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:key="header_about"
        android:title="@string/settings_header_about">

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_site"
            android:title="@string/settings_site"

            android:summary="@string/settings_site_summary" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_terms"
            android:title="@string/settings_terms"

            android:summary="" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_privacy"
            android:title="@string/settings_privacy"

            android:summary="" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_gdpr"
            android:title="@string/settings_gdpr"

            android:summary="" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_thanks"
            android:title="@string/settings_thanks"

            android:summary="" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"
            android:key="settings_version"
            android:title="@string/settings_version"

            android:summary="@string/settings_copyright_info" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:key="header_others"
        android:title="@string/settings_header_others">

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_logout"
            android:title="@string/settings_logout"
            android:enabled="true"
            android:summary="" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            android:key="settings_contact_us"
            android:title="Support Center"

            android:summary="@string/settings_contact_us_summary" />
    </PreferenceCategory>

</PreferenceScreen>
