<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_flow"
            android:icon="@drawable/rfeed"
            android:title="@string/page_flow" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_business"
            android:title="@string/page_3" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/rbookmark"
            android:title="@string/page_5" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/rnotify"
            android:title="@string/page_6"
            app:actionLayout="@layout/menu_counter_plain_" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/rpushnotification"
            android:title="@string/page_7"
            app:actionLayout="@layout/menu_counter_plain_" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/rprofile"
            android:title="@string/page_8" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/rsetting"
            android:title="@string/title_activity_settings" />

    </group>

</menu>
