<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" >
            <ImageView
                android:layout_width="387dp"
                android:layout_height="89dp"
                android:padding="10dp"
                android:src="@mipmap/ic_launcher" />

            <com.facebook.login.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:layout_marginBottom="20dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/action_login_with_google" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:id="@+id/actionContainer"
                android:background="@color/colorCardBackground"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_authorization_via_facebook"
                    android:id="@+id/labelAuthorizationViaFacebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_regular_signup"
                    android:id="@+id/regularSignup"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/placeholder_login"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:maxLength="24"
                android:id="@+id/signupUsername" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/placeholder_fullname"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:maxLength="24"
                android:id="@+id/signupFullname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:id="@+id/signupPassword"
                android:layout_marginTop="10dp"
                android:maxLength="20"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/placeholder_email"
                android:ems="10"
                android:maxLength="64"
                android:layout_marginTop="10dp"
                android:id="@+id/signupEmail" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="361dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/signup_label_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_label_terms_and_policies"
                android:id="@+id/SignupLabelTerms"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/app_bg" />

            <Button
                android:id="@+id/signupJoinHowBtn"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/counter_bg"
                android:text="@string/action_signup"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/signinBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/list_item_bg_normal"
                android:stateListAnimator="@null"
                android:text="@string/action_login"
                android:textColor="@color/avatar_border"

                android:textStyle="normal"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>