<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:background="@color/colorGroupBubbleBackground"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" >

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="20dp" />

            <ImageView
                android:layout_width="358dp"
                android:layout_height="124dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:src="@mipmap/ic_launcher" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/action_login_with_google" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
android:textColor="@color/colorPrimary"
                android:text="Or Enter your Username and Password "
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/signinUsername"
                android:layout_width="381dp"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/placeholder_login_or_email"
                android:inputType="textPersonName"
                android:maxLength="24" />

            <EditText
                android:id="@+id/signinPassword"
                android:layout_width="387dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:maxLength="20" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_login"
                android:id="@+id/signinBtn"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:background="@drawable/list_item_bg_pressed"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_forgot_password"
                android:id="@+id/forgotPassword"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="5dp" />

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/item_list_row_bg_hover"
                android:stateListAnimator="@null"
                android:text="@string/action_signup"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>